Added Zoom Hover feature on gallery photos

--- a/styles.css
+++ b/styles.css
@@ -144,3 +144,13 @@ body {
   background-color: white;
   color: black;
 }
+
+.zoom {
+  padding: 50px;
+  transition: transform .2s; /* Animation */
+  margin: 0 auto;
+}
+
+.zoom:hover {
+  transform: scale(2); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+}
