--- a/styles.css
+++ b/styles.css
@@ -68,6 +68,14 @@ body {
   height: 600px;
 }
 
+.gallery-example p {
+  display: flex;
+  justify-content: center;
+  font-size: 18px;
+  font-weight: bold;
+  height: 100px;
+}
+
 .gallery-page {
   display: flex;
   align-items: center;
@@ -147,10 +155,10 @@ body {
 
 .zoom {
   padding: 50px;
-  transition: transform .2s; /* Animation */
+  transition: transform .2s; 
   margin: 0 auto;
 }
 
 .zoom:hover {
-  transform: scale(2); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+  transform: scale(2); 
 }
