--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ body {
 .bio-container h1 {
   font-family: lobster;
   text-align: center;
-  font-size: 75px;
+  font-size: 105px;
 }
 
 .bio-container p {
@@ -82,13 +82,6 @@ body {
   height: 600px;
 }
 
-.gallery-example p {
-  display: flex;
-  justify-content: center;
-  font-size: 18px;
-  font-weight: bold;
-  height: 100px;
-}
 
 .gallery-page {
   display: flex;
@@ -97,9 +90,10 @@ body {
 }
 
 .gallery-page button {
-  font-size: 20px;
+  font-size: 30px;
   padding: 10px 30px;
   background-color: white;
+  font-family: alberston;
 }
 
 .footer-container {
