--- a/styles.css
+++ b/styles.css
@@ -96,12 +96,24 @@ body {
   font-family: alberston;
 }
 
-.footer-container {
+.footer {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-end;
-  height: 250px;
+  height: 225px;
+  font-size: 18px;
+}
+
+.site-by {
+  display: flex;
+  justify-content: center;
+  font-size: 20px;
+  margin-top: -25px;
+}
+
+.site-by a {
+  font-size: 20px;
 }
 
 .gal-pages {
