--- a/styles.css
+++ b/styles.css
@@ -195,6 +195,7 @@ a {
   text-align: center;
   font-size: 25px;
   width: 750px;
+  flex: 1;
 }
 
 .active {
@@ -210,4 +211,16 @@ a {
 
 .zoom:hover {
   transform: scale(1.25);
+}
+
+.contact-img {
+  display: flex;
+  flex: 1;
+  justify-content: flex-end;
+}
+
+.contact-img-2 {
+  flex: 1;
+  align-items: center;
+  justify-content: center;
 }
