--- a/styles.css
+++ b/styles.css
@@ -68,6 +68,16 @@ a {
   max-width: 1200px;
 }
 
+.home-img {
+  border: 1px solid white;
+  display: flex;
+  justify-content: center;
+  max-width: 253px;
+  margin-left: 50px;
+  margin-right: -225px;
+  margin-top: 100px;
+}
+
 .bio-img {
   display: flex;
   flex-direction: column;
