--- a/styles.css
+++ b/styles.css
@@ -230,10 +230,15 @@ a {
   justify-content: flex-end;
 }
 
+.contact-img img{
+  border: .5px solid white;
+}
+
 .img-1-info {
  display: flex;
  justify-content: center;
  font-size: 23px; 
+ margin-top: 10px;
 }
 
 .contact-me {
@@ -247,6 +252,10 @@ a {
   justify-content: center;
   width: 294px;
   text-align: center;
+}
+
+.contact-img-2 img{
+  border: 1px solid white;
 }
 
 .img-2-info {
